<resources>
    <string name="general_information">Información General</string>
    <string name="option2">Mapa</string>
    <string name="subsedes">Subsedes</string>
    <string name="participants">Participantes</string>
    <string name="guest_artists">Invitados Extranjeros</string>
    <string name="child_program">Programación Infantil</string>
    <string name="literary_program">Programación Literaria</string>
    <string name="artistic_program">Programación Artística</string>
    <string name="app_name">FIL Habana</string>
    <string name="about_us">Acerca de</string>
    <string name="description">Descripción</string>
    <string name="exit">Salir</string>
    <string name="exit_again_toast">Presione de nuevo atrás para salir</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Si</string>
    <string name="exit_confirm">Confirmar Salir</string>
    <string name="exit_confirm_description">Desea realmente salir de la Aplicación</string>
    <string name="phone">Teléfono</string>
    <string name="visit_us_at">Visítenos en</string>
    <string name="filh_website"><u>https://www.filhcuba.cu/</u></string>
    <string name="desoft_email"><u>p-sesiones@anpp.gob.cu</u></string>
    <string name="about_text">Es una aplicación desarrollada por la empresa DESOFT, de conjunto con la Cámara Cubana del Libro</string>
    <string name="description_app">FIL Habana es una aplicación para dispositivos móviles, con Sistema Operativo Android. Brinda la posibilidad de conocer la información general relacionada con la 31 Feria Internacional del Libro de La Habana 2023. Se podrá conocer a través de mapas la ubicación de las salas, pabellones y carpas de las sedes principales de la feria. Además, cuenta con información relacionada con las Subsedes, Invitados extranjeros y Programación Literaria, Artística e Infantiles.</string>
    <string name="details_app">La <b>31 Feria Internacional del Libro de La Habana</b>, a celebrarse del <b>9 al 19 de febrero de 2023</b>, en sus sedes del <b>Parque Histórico Militar San Carlos de la Cabaña</b> y el <b>Centro Histórico de La Habana</b>.\n\nCon la premisa martiana: <b>«Leer es crecer»</b>, el evento tendrá como temática: <b>«La lectura inclusiva»</b>, y abordará el impacto cultural de nuevos formatos para la lectura que suponen en la actualidad una revolución editorial, solo comparable a la invención de la imprenta. Se rendirá homenaje a los Centenarios de Fina García Marruz y Antonio Núñez Jiménez, así como a un País Invitado de Honor y a dos relevantes autores cubanos.\n\nComo parte de los múltiples espacios que se abren durante la ocasión, tendrán lugar: el Salón Profesional del Libro, el cual desarrollará dentro de su programa el Taller Nacional del Librero y el Encuentro de Editores y Traductores; el Proyecto Cuba Digital reunirá a diversos gestores del libro digital y otros productos asociados al conocimiento; de igual forma se realizará el Evento de Publicaciones Seriadas y Medios Digitales, el Encuentro de Jóvenes Escritores de Iberoamérica, el Encuentro Científico Bibliotecológico, Encuentro de Promotores de Poesía, el Programa Artístico-Literario del Pabellón Infantil Tesoro de Papel, y los coloquios de Ciencias Sociales y Salud Humana y Medio Ambiente, así como el Encuentro de Historiadores.\n\nEl acontecimiento más trascendente del sector editorial cubano es escenario para la concurrencia de todas las artes, al ser el evento cultural de la familia cubana.\n\nCon la participación de escritores, editores, traductores, diseñadores, ilustradores, distribuidores, libreros, bibliotecarios y público en general, durante diez días el evento propiciará la exhibición, negociación, comercialización y promoción de la literatura cubana y extranjera. Posteriormente, la Feria recorrerá el país como símbolo de la voluntad del Estado cubano para que el libro y la lectura continúen siendo un derecho del pueblo.\n\nCon gran hospitalidad recibiremos a todos los que deseen acompañarnos en estas jornadas inolvidables.</string>
    <string name="country_info">Es un país ubicado en la zona noroccidental de América del Sur, organizado constitucionalmente como una república unitaria descentralizada. Su capital es Bogotá D.C. Su superficie es de 2.070.408 km2, de los cuales 1.141.748 km2 corresponden a su territorio continental y los restantes 928.660 km2 a su extensión marítima, de la cual mantiene diferendos limítrofes con Venezuela y Nicaragua. Limita al este con Venezuela y Brasil, al sur con Perú y Ecuador y al noroeste con Panamá. Colombia es la única nación de América del Sur que tiene costas en el océano Pacífico y en el Mar Caribe, en los que posee diversas islas como el archipiélago de San Andrés, Providencia y Santa Catalina. Colombia es reconocida a nivel mundial por la producción de café suave, flores, esmeraldas, carbón, petróleo y su diversidad cultural.\n\nSegún la Constitución de 1991, Colombia está compuesta por 32 departamentos y un único Distrito Capital (Bogotá). Los gobiernos departamentales se encuentran divididos en tres poderes: La rama ejecutiva, ejercida por el gobernador departamental, elegido cada cuatro años sin posibilidad de reelección.\n\nCada departamento tiene su propia asamblea departamental, corporación pública de elección popular regional que goza de autonomía administrativa y presupuesto propio.\n\nLos departamentos están conformados por la asociación entre municipios. Actualmente hay 1.120 municipios entre los que están el distrito capital, y los distritos de Barranquilla, Cartagena, Santa Marta, Tunja, Cúcuta, Popayán, Buenaventura, Turbo y Tumaco.\n\nLos territorios indígenas en Colombia son creados en común acuerdo entre el gobierno y las comunidades indígenas. En casos en que los territorios indígenas abarcan más de un departamento o municipio, los gobiernos locales administran de forma conjunta con los consejos indígenas, en dichos territorios y como está establecido en los artículos 329 y 330 de la constitución de Colombia.\n\nLos territorios indígenas pueden llegar a tener carácter de entidad territorial cuando cumplen los requisitos de la ley. Los territorios indígenas en Colombia cubren un área aproximada de 30.845.231 ha, que se encuentran en mayor parte en los departamentos de Amazonas, Cauca, La Guajira, Guaviare y Vaupés, entre otros.\n\nLas culturas indígenas asentadas en el país a la llegada de los españoles, la cultura europea (de España) y las africanas importadas durante la colonia son la base de la cultura colombiana, la cual también comparte rasgos fundamentales con otras culturas hispanoamericanas en manifestaciones como la religión, la música, los bailes, las fiestas, entre otras.\n\nCulturalmente, Colombia es un país de regiones en el que la heterogeneidad obedece a variados factores como el aislamiento geográfico y la dificultad de acceso entre las diferentes zonas del país.\n\nLas subregiones o grupos culturales más importantes son los «cachacos» (ubicados en el altiplano cundiboyacense), los «paisas» (asentados en Antioquia, el Eje Cafetero), los «llaneros» (habitantes de los Llanos Orientales), los «vallunos» (zona del Valle del Cauca) y los «costeños» (ubicados en la Costa Caribe), entre otras, cuyas\n\n<b>Literatura Colombiana</b>\n\nDurante el llamado boom de la literatura latinoamericana surgieron escritores exitosos encabezados por el Nobel de Literatura Gabriel García Márquez y su obra magna Cien años de soledad, Eduardo Caballero Calderón, Manuel Mejía Vallejoy Álvaro Mutis, único colombiano galardonado con los premios Cervantes y Príncipe de Asturias.\n\nOtros autores contemporáneos destacados son William Ospina y Germán Castro Caicedo, escritor que vende el mayor número de libros en Colombia después de García Márquez.</string>
    <string name="araceli_description">La Habana, 1937\n\nGraduada de Bachiller en Ciencias y Letras en el Instituto de Segunda Enseñanza de La Habana en 1955.\n\nHa trabajado sistemáticamente en la Biblioteca Nacional José Martí, donde ha desempeñado la jefatura del Departamento de Colección Cubana (1972–1979) y asesorado, de modo simultáneo, la Red de Bibliotecas públicas del País.\n\nSu prestigio va más allá del país: en México, República Dominicana, Colombia, España y los Estados Unidos ha dictado conferencias o colaborado en proyectos varios. De 1995 a 2005 fue miembro corresponsal de la Sección de Bibliografía de la Federación Internacional de Asociaciones e Instituciones de la Biblioteca (IFLA, por sus siglas en inglés), y en 2004 se le nombró miembro del Consejo de Redacción de la revista estadounidense Cuban Studies.\n\nPosee la condición de profesora titular adjunta de la Universidad de La Habana, al igual que la de investigadora titular. Ha ejercido largamente la docencia en el área de la bibliotecología, incluso en cursos de posgrado de esa Universidad, y es miembro del Tribunal de Categorías Científicas del Ministerio de Cultura desde 1995.\n\nEntre otros numerosos reconocimientos ha recibido la Distinción por la Cultura Cubana y las medallas Alejo Carpentier y Nicolás Guillén. En dos ocasiones ha sido seleccionada Vanguardia Nacional del Trabajo.\n\nEn 2007 el Coloquio Internacional Del papiro a la biblioteca virtual, de la Casa de las Américas, le rindió homenaje, y la Sociedad Cultural José Martí le otorgó el premio La Utilidad de la Virtud.\n\nLe fue otorgada la medalla Raúl Gómez García y el Premio Nacional de Investigación Cultural 2003.</string>
    <string name="julio_description">La Habana, 1940\n\nPremio Nacional de Literatura 2021. Narrador y escritor de varios libros de cuentos y novelas. Entre sus obras más destacadas se encuentran Cuando la noche muera y Llueve sobre la Habana. Sus textos han sido traducidos a varios idiomas como el alemán e italiano. Posee la orden A.S.Pushkin que confiere el Estado ruso por el conjunto de su obra.\n\nSu obra narrativa integrada por algunos libros de cuentos y varias novelas ha abordado, con acierto e inteligencia, diversas problemáticas del hombre y su mundo. Su prosa limpia, sencilla y diáfana, es un eficaz instrumento de un discurso narrativo de indudable alcance en el contexto de la actual literatura cubana.\n\nEn su extensa obra destacan los títulos Para matar al lobo, 1971, mención en el Premio Casa de las Américas y filmada por la Televisión Cubana, Cuando la noche muera, 1981 Premio de novela Cirilo Villaverde de la Unión de Escritores y Artistas de Cuba, también filmada por la Televisión Cubana, El polvo y el oro, Letras Cubanas, 1996  (novela) Premio Mazatlán de Literatura de México, Premio de la Crítica Literaria de Cuba, finalista del Premio Rómulo Gallegos de Venezuela y publicada en México, Cuba, España e Italia y El cuaderno de los disparates, Ediciones Unión, 2018\n\nSu obra ha sido traducida al alemán, búlgaro, checo, georgiano, lituano, polaco, ruso, turco, francés, ucraniano, italiano, portugués e inglés.</string>
    <string name="principal_map">PARQUE HISTÓRICO MILITAR MORRO-CABAÑA</string>
    <string name="sedes_map">CENTRO HISTÓRICO DE LA CIUDAD SEDES</string>
    <string name="details">Detalles</string>
    <string name="guest_country">País Invitado</string>
    <string name="honored">homenajeados</string>
    <string name="select_map">Seleccione el Mapa que desea visualizar</string>
    <string name="literary_program_info">Las actividades del Programa Literario de la Feria Internacional del Libro de la Habana podrán ser consultadas en su sitio oficial, accediendo desde el Menú Principal a la opción Programa.\nAdemás, desde el sitio podrá acceder a las publicaciones El Cañonazo para informarse de todo lo que acontece en la Feria.</string>
    <string name="important_info">Información Importante</string>
    <string name="carps">Carpas</string>
    <string name="stands">Pabellones</string>
    <string name="search_for_name">Buscar por Nombre</string>
    <string name="topics">Temáticas</string>
</resources>