<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_homeFragment">

    <fragment
        android:id="@+id/nav_homeFragment"
        android:name="cu.desoft.filhabana.ui.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_aboutFragment"
        android:name="cu.desoft.filhabana.ui.fragments.AboutFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_descriptionFragment"
        android:name="cu.desoft.filhabana.ui.fragments.DescriptionFragment"
        android:label="@string/description"
        tools:layout="@layout/fragment_description" />
</navigation>